Added two functions in matlab. Removed the Bibliography folder.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,1 +1,33 @@
-fosjgjo
+@article{nestler2015fast,
+  title={Fast Ewald summation based on NFFT with mixed periodicity},
+  author={Nestler, Franziska and Pippig, Michael and Potts, Daniel},
+  journal={Journal of Computational Physics},
+  volume={285},
+  pages={280--315},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{fratini2009unconventional,
+  title={Unconventional metallic conduction in two-dimensional Hubbard-Wigner lattices},
+  author={Fratini, Simone and Merino, J},
+  journal={Physical Review B},
+  volume={80},
+  number={16},
+  pages={165110},
+  year={2009},
+  publisher={APS}
+}
+
+@article{gibbon2002long,
+  title={Long-range interactions in many-particle simulation},
+  author={Gibbon, Paul and Sutmann, Godehard},
+  journal={Quantum simulations of many-body systems: from theory to algorithm. Eds. J. Grotendorst, D. Marx and A. Muramatsu. NIC-series},
+  volume={10},
+  pages={467--506},
+  year={2002}
+}
+
+
+
+
