Modified bibliography, suppressed Prova_TeX and started the TeX work in another project.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -28,6 +28,36 @@
   year={2002}
 }
 
+@article{pramudya2011nearly,
+  title={Nearly frozen Coulomb liquids},
+  author={Pramudya, Yohanes and Terletska, Hanna and Pankov, S and Manousakis, Efstratios and Dobrosavljevi{\'c}, V},
+  journal={Physical Review B},
+  volume={84},
+  number={12},
+  pages={125120},
+  year={2011},
+  publisher={APS}
+}
+
+@book{arfken2011mathematical,
+  title={Mathematical methods for physicists: a comprehensive guide},
+  author={Arfken, George B and Weber, Hans J and Harris, Frank E},
+  year={2011},
+  publisher={Academic press}
+}
+
+@article{fratini2007optical,
+  title={Optical and spectral properties of quantum domain walls in the generalized Wigner lattice},
+  author={Fratini, Simone and Rastelli, G},
+  journal={Physical Review B},
+  volume={75},
+  number={19},
+  pages={195103},
+  year={2007},
+  publisher={APS}
+}
+
+
 
 
 
