Made some modifications. Next target is to find the enrgies for the third movements; the idea is to check the double movements and then to select only the best ones

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -57,6 +57,12 @@
   publisher={APS}
 }
 
+@article{jafari2008introduction,
+  title={Introduction to Hubbard model and exact diagonalization},
+  author={Jafari, S Akbar},
+  journal={arXiv preprint arXiv:0807.4878},
+  year={2008}
+}
 
 
 
